--- a/public_static/dropdown.html
+++ b/public_static/dropdown.html
@@ -46,24 +46,24 @@
             </div>
             <div class="list-group">
                 <li class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item
-                    <i class="fa fa-volume-up" aria-hidden="true" style="margin-left: 5px; font-size: 26px; float: right; position: relative; top: 8px;"></i>
                     <div class="dropdown" style="float: right; top: 2px;">
-                        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><img src="add.png" width="26px">
+                        <button class="btn btn-default dropdown-toggle dropdown-button" type="button" data-toggle="dropdown"><img src="add.png" width="26px">
                         </button>
-                        <ul class="dropdown-menu" style="position: absolute; left: -170px;">
+                        <ul class="dropdown-menu" style="position: absolute; left: -207px;">
                           <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
                           <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
                           <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Queue</button></a></li>
-                          <li><a href="#"><i class="fa fa-list-ul" aria-hidden="true" style="color: lightgray"></i> <button type="button" name="button" class="call_modal" onclick="viewModal()" >Add to Playlist</button></a></li>
+                          <li><a href="#"><i class="fa fa-list-ul" aria-hidden="true" style="color: lightgray"></i><button type="button" name="button" class="call_modal" onclick="viewModal()" >Add to Playlist</button></a></li>
                           <li class="divider"></li>
                           <li><a href="#">Info, Artist, and more...</a></li>
                         </ul>
                     </div>
+                    <i class="fa fa-volume-up" aria-hidden="true" style="margin-left: 5px; font-size: 26px; float: right; position: relative; top: 8px; left: -10px;"></i>
                 </li>
                 <li class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item
-                    <i class="fa fa-volume-up" aria-hidden="true" style="margin-left: 5px; font-size: 26px; float: right; position: relative; top: 8px;"></i>
+                    <!-- <i class="fa fa-volume-up" aria-hidden="true" style="margin-left: 5px; font-size: 26px; float: right; position: relative; top: 8px;"></i> -->
                     <div class="dropdown" style="float: right; top: 2px;">
-                        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><img src="add.png" width="26px">
+                        <button class="btn btn-default dropdown-toggle dropdown-button" type="button" data-toggle="dropdown"><img src="add.png" width="26px">
                         </button>
                         <ul class="dropdown-menu" style="position: absolute; left: -170px;">
                           <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
