--- a/public_static/main.html
+++ b/public_static/main.html
@@ -55,7 +55,7 @@
                   <input type="text" class="form-control" placeholder="Song Name..." style="font-size: 16px; margin-top: 20px; margin-bottom: 20px;">
                   <input type="text" class="form-control" placeholder="Artist..." style="font-size: 16px; margin-top: 20px; margin-bottom: 20px;">
                   <input type="text" class="form-control" placeholder="Genre..." style="font-size: 16px; margin-top: 20px; margin-bottom: 20px;">
-                  <input type="file">
+                  <h4 style="display: inline;">Select Cover Photo: &nbsp;</h4><input style="display: inline;" type="file">
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">UPLOAD</button>
