--- a/public_static/main.html
+++ b/public_static/main.html
@@ -16,7 +16,7 @@
         <source id="aud_src" src=''>
     </audio>
     <!-- NAVBAR BEGIN -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="z-index: 100000000;">
         <div class="container-fluid">
             <!-- NAVBAR HEADER  -->
             <div class="navbar-header">
@@ -108,7 +108,7 @@
     </div>
 
     <!-- FOOTER BEGINS THROUGH NAVBAR -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a 0%, #80d0c7 100%);">
+    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a 0%, #80d0c7 100%); z-index: 10000000;">
         <img id="img-wrapper" src="">
         <div class="title">
             <div class="song-name">
