--- a/public_static/dropdown.html
+++ b/public_static/dropdown.html
@@ -14,7 +14,7 @@
         <source id="aud_src" src='divine.mp3'>
     </audio>
     <!-- NAVBAR BEGIN -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="z-index: 100000000;">
         <div class="container-fluid">
             <!-- NAVBAR HEADER  -->
             <div class="navbar-header">
@@ -39,6 +39,26 @@
         </div>
     </nav>
     <!-- NAVBAR ENDS -->
+
+    <!-- SEARCH RESULTS -->
+    <div class="search-results" style="width: 400px; height: 100%; background-color: white; box-shadow: 0 0 12px rgba(0,0,0,0.8); position: fixed; z-index: 100000; top: 71px; left: 115px;">
+        <h3 style="text-align: center;">Your Search Results</h3>
+        <div class="list-group">
+            <li href="#" class="list-group-item"><div style="display: inline-block; margin-left: 20px; position: relative; top: -4px;"><img src="Divide_cover.png" style="width: 60px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+                <div class="dropdown" style="float: right; top: 15px;">
+                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+                    </button>
+                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+                    </ul>
+                </div>
+            </li>
+        </div>
+    </div>
+    <!-- SEARCH RESULTS ENDS HERE -->
+
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px; ">
         <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 9px 0; box-shadow: inset 0 0 23px rgba(0,0,0,0.5)"><!--important-->
             <div id="clearQueue">
@@ -119,7 +139,7 @@
     <div class="mymodal_main" style="display:none"></div>
 
     <!-- FOOTER BEGINS THROUGH NAVBAR -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%);">
+    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%); z-index: 10000000;">
         <img id="img-wrapper" src="sample-img.jpg">
         <div class="title">
             <div class="song-name">
@@ -188,7 +208,7 @@
             $('.mymodal_main').toggle();
         }
     </script>
-    <!-- <script type="text/javascript" src="main.js"></script> -->
+    <script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
