--- a/public_static/main.html
+++ b/public_static/main.html
@@ -16,7 +16,7 @@
         <source id="aud_src" src=''>
     </audio>
     <!-- NAVBAR BEGIN -->
-    <nav class="navbar navbar-default navbar-fixed-top" style="z-index: 100000000;">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- NAVBAR HEADER  -->
             <div class="navbar-header">
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 280px;">
                 </div>
-                <button onclick="search()" class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
+                <button onclick="search()" class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px; outline: none;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
             </form>
         </div>
     </nav>
