--- a/public_static/index.html
+++ b/public_static/index.html
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; width: 500px;">
             </div>
-            <button class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
+            <a href="http://localhost:5000/main.html" class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></a>
         </form>
         <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
             <img src="loginfb.png" alt="loginfb" style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -106,6 +106,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
     <script>
         $(".carousel").carousel({
             interval: 2500,
