--- a/public_static/index.html
+++ b/public_static/index.html
@@ -30,13 +30,15 @@
 
     <div id="box1">
         <h1>Welcome Search Your Music</h1>
-        <form action="#" method="get" class="navbar-form">
+        <form action="/main.html" method="get" class="navbar-form">
             <div class="form-group">
-                <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; width: 500px;">
+                <input name="ty" type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; width: 500px;">
             </div>
-            <a href="http://localhost:5000/main.html" class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></a>
+            <!-- <form action="/main.html"> -->
+            <button type="submit" class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
         </form>
         <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
+            <img src="loginfb.png" alt="loginfb" style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="http://localhost:5000/main.html" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
         </div>
 
@@ -105,7 +107,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="index.js"></script>
     <script>
         $(".carousel").carousel({
             interval: 2500,
