--- a/public_static/main.html
+++ b/public_static/main.html
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 280px;">
                 </div>
-                <button onclick="search()" class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px; outline: none;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
+                <button id="searchButton" onclick="search(id)" target=none class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px; outline: none;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
             </form>
         </div>
     </nav>
