--- a/public_static/index.html
+++ b/public_static/index.html
@@ -38,7 +38,7 @@
             <button type="submit" class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
         </form>
         <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
-            <img src="loginfb.png" alt="loginfb" style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <img src="loginfb.png" alt="loginfb"s style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             <a href="http://localhost:5000/main.html" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
         </div>
 
