made compatible with sql db

--- a/public_static/main.html
+++ b/public_static/main.html
@@ -13,7 +13,7 @@
 </head>
 <body style="overflow-y:hidden;">
     <audio id='audio'>
-        <source id="aud_src" src=''>
+        <source id="aud_src" src='' type='audio/mp3'>
     </audio>
     <!-- NAVBAR BEGIN -->
     <nav class="navbar navbar-default navbar-fixed-top">
