--- a/public_static/index.html
+++ b/public_static/index.html
@@ -41,7 +41,7 @@
         </form>
         <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
             <!-- <img src="loginfb.png" alt="loginfb"s style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <a href="http://localhost:5000/main.html" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
+            <a href="/main.html" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
         </div>
 
     </div>
