--- a/public_static/upload.html
+++ b/public_static/upload.html
@@ -48,7 +48,7 @@
     </head>
 
     <body>
-        <form ref="uploadForm" id="uploadForm" action="http://localhost:5000/upload"  type="text" class="dropzone" method="post" encType="multipart/form-data" name="file">
+        <form ref="uploadForm" id="uploadForm" action="/upload"  type="text" class="dropzone" method="post" encType="multipart/form-data" name="file">
             <!-- <div id="dropBox">                    <h3>Drag Your mp3 To Upload</h3></div>
             <img src="cloud-upload.png" id="cloud"> -->
         </form>
