--- a/public_static/main.html
+++ b/public_static/main.html
@@ -13,11 +13,7 @@
 </head>
 <body style="overflow-y:hidden;">
     <audio id='audio'>
-<<<<<<< HEAD
-        <source id="aud_src" src="">
-=======
         <source id="aud_src" src='' type='audio/mp3'>
->>>>>>> 8833bd278cbae1f9ef08106b1f2111ef7b36c267
     </audio>
     <!-- NAVBAR BEGIN -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -29,7 +25,7 @@
 
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
-                <li id="homeNav"><a href="http://localhost:5000/">Home</a></li>
+                <li id="homeNav"><a href="/">Home</a></li>
                 <li id="favoritesNav"><a href="#">Favorites</a></li>
                 <li id="playlistNav"><a href="#">Playlists</a></li>
                 <li id="libraryNav"><a href="#">Library</a></li>
